bug fix: relationType (from/to)